# BP-y1

labwork1/: CMakeLists.txt  README.md  main.cpp
labwork10/: CMakeLists.txt  README.md
labwork10/examples/: fibonacci.is  fizzBuzz.is  maximum.is
labwork10/lib/: data.h  expressions.h  functions.h  interpreter.cpp  interpreter.h  lexer.h  statements.h
labwork2/: CMakeLists.txt  README.md
labwork3/: CMakeLists.txt  README.md  main.cpp  test.tsv
labwork4/: CMakeLists.txt  README.md
labwork5/: CMakeLists.txt  README.md  main.cpp
labwork6/: CMakeLists.txt  README.md  main.cpp
labwork6/lib/: CMakeLists.txt  MyLib.hpp
labwork6/lib/cache/: date=2025-02-24_route=c25-c2.json
labwork6/lib/program_files/: Data_Structures.hpp  MyRequest.cpp  MyRequest.hpp  Parser.cpp  Parser.hpp  WorkWithJson.cpp  WorkWithJson.hpp
labwork7/: CMakeLists.txt  README.md
labwork8/: CMakeLists.txt  README.md
labwork8/lib/: CMakeLists.txt  all_includes.h  processing.h
labwork8/lib/as_data_flow_adapter/: as_data_flow_adapter.h
labwork8/lib/as_vector_adapter/: as_vector_adapter.h
labwork8/lib/dir_adapter/: dir_adapter.h
labwork8/lib/dropnullopt_adapter/: dropnullopt_adapter.h
labwork8/lib/filter_adapter/: filter_adapter.h
labwork8/lib/open_files_adapter/: open_files_adapter.h
labwork8/lib/out_adapter/: out_adapter.h
labwork8/lib/split_adapter/: split_adapter.h
labwork8/lib/split_expected_adapter/: split_expected_adapter.h
labwork8/lib/transform_adapter/: transform_adapter.h
labwork8/lib/write_adapter/: write_adapter.h
labwork9/: CMakeLists.txt  README.md
(+61 files in other folders)
